Date Input Icon Overlap Fix

--- a/VoteMaster/VoteMaster/wwwroot/css/site.css
+++ b/VoteMaster/VoteMaster/wwwroot/css/site.css
@@ -1118,7 +1118,7 @@ footer{
 }
 
 .date-filter .form-control{
-  padding-left: 2.5rem;
+  padding-left: 0.875rem;
   font-size: 0.875rem;
 }
 
